[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lidar-converter"
version = "0.2.0"
description = "Multi-vendor LiDAR conversion pipeline with automatic vendor detection"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Param Patel", email = "parampatel.005@gmail.com"}
]
keywords = [
    "lidar", "point-cloud", "conversion", "ouster", "velodyne", "livox", "hesai",
    "roboSense", "pcap", "las", "laz", "csv", "pcd", "bin", "scientific", "geospatial"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "ouster-sdk>=0.15.1",
    "laspy>=2.6.0",
    "numpy>=1.19.0",
    "scipy>=1.7.0",
    "click>=8.1.0",
    "tqdm>=4.60.0",
    "rich>=12.0.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "dpkt>=1.9.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.scripts]
lidar-converter = "Lidar_Converter.cli:main"

[project.urls]
"Homepage" = "https://github.com/Param-Patel-o5/lidar-multi-convert"
"Bug Tracker" = "https://github.com/Param-Patel-o5/lidar-multi-convert/issues"
"Documentation" = "https://github.com/Param-Patel-o5/lidar-multi-convert#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["Lidar_Converter*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=Lidar_Converter --cov-report=html --cov-report=term-missing"
minversion = "6.0"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".venv"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
